--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
           <input type="password" id="signup-password" required />
           <label for="signup-password">Choose password</label>
         </div>
+        <div class="input-field">
+          <input type="number" id="signup-phoneNumber" required/>
+          <label for="signup-phoneNumber">Number</label>
+        </div>
         <button class="btn yellow darken-2 z-depth-0">Sign up</button>
       </form>
     </div>
